# SRI

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.test  Makefile  README.md  api.py  docker-compose.override.yml.example  docker-compose.yml  dockerfile  main.py  pyproject.toml  pytest.ini  setup.sh
data/: seen_urls.txt
data/index/: index_meta.json
data/mobile/: xataka_mobile_2026-05-11.jsonl  xataka_mobile_2026-05-13.jsonl
data/pc/: xataka_pc_2026-05-11.jsonl  xataka_pc_2026-05-13.jsonl
data/stats/: global.json  queries.jsonl
src/: config.py
src/api/: app.py  models.py  server.py
src/api/routes/: health.py  indexing.py  query.py
src/errors/: extract_data_errors.py  indexing_errors.py  internet_search_error.py  llm_errors.py  rag_errors.py  retrieval_errors.py  vector_db_errors.py
src/extract_data/: extract.py  settings.py
src/feedback/: __init__.py  rocchio.py
src/generator/: __init__.py  answer_generator.py  generator.py
src/indexing/: __init__.py  chunker.py  indexer.py  storage.py
src/positioning/: __init__.py  ranker.py
src/rag/: rag.py
src/retrieval/: __init__.py  langchain_retriever.py  lm_retriever.py  query_processor.py
src/search_internet/: __init__.py  content_fetcher.py  searcher.py
src/stats/: stats.py
src/utils/: __init__.py  logger.py  model_downloader.py
src/vector_db/: __init__.py  embeddings.py  langchain_retriever.py  vector_store.py
tests/: __init__.py  conftest.py  test_api.py  test_errors.py  test_integration.py  test_rag.py
ui/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json  vite.config.js
ui/src/: App.jsx  index.css
ui/src/components/: SidebarSettings.jsx  TextWithCitations.jsx  TokenStats.jsx  WelcomePanel.jsx  index.jsx
