[project]
name = "sri"
version = "0.1.0"
description = "Sistema de Recuperación de Información — tech-news domain (mobile & PC)"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "scrapy==2.14.1",
    "beautifulsoup4>=4.12.0",
    "numpy==2.4.2",
    "requests>=2.31.0",
    "nltk>=3.9.1",
    "scikit-learn==1.6",
    "chromadb",
    "langchain-chroma",
    "llama-cpp-python>=0.3.0",
    "langchain>=1.2.10",
    "langchain-huggingface>=1.2.1",
    "langchain-community",
    "sentence-transformers>=2.3.1", 
    "emoji>=2.15.0",
    "ddgs>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "transformers<4.48.3",
    "huggingface-hub", 
]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]